--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/mongodb-odm-bundle": "^5.3",
         "doctrine/orm": "^3.4",
         "lexik/jwt-authentication-bundle": "^3.1",
+        "mongodb/mongodb": "^2.1",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
